Better footer on small screens, fixes #41
Increase line-height and make sure links don't break to two lines

--- a/_includes/inline-style.css
+++ b/_includes/inline-style.css
@@ -362,6 +362,20 @@ footer {
   justify-content: space-between;
 }
 
-footer div:last-of-type {
-  padding-inline-start: 1rem;
+footer div {
+  line-height: 1.5;
+}
+
+footer div {
+  padding-block-end: .7rem;
+}
+
+footer div a {
+  white-space: nowrap;
+}
+
+@media screen and (min-width: 800px) {
+  footer div:last-of-type {
+    padding-inline-start: 1rem;
+  }
 }
